# jackdaw

./: Cargo.toml
.jsn/: project.jsn
crates/jackdaw_animation/src/: compile.rs  (+1 more)
crates/jackdaw_api/: Cargo.toml
crates/jackdaw_bsn/: Cargo.toml
crates/jackdaw_debug_panel/: Cargo.toml
crates/jackdaw_debug_panel/src/: lib.rs  macros.rs  marker.rs  methods.rs  plugin.rs
crates/jackdaw_debug_panel/tests/: brp_list.rs
crates/jackdaw_remote/: Cargo.toml
crates/jackdaw_terrain/: Cargo.toml
src/: alignment_guides.rs  asset_browser.rs  builtin_extensions.rs  commands.rs  debug_settings.rs  draw_brush.rs  edit_mode_ops.rs  entity_ops.rs  entity_templates.rs  extensions_dialog.rs  gizmos.rs  hierarchy.rs  keybind_focus.rs  keybind_settings.rs  layout.rs  lib.rs  main.rs  material_browser.rs  material_preview.rs  measure_tool.rs  operator_tooltip.rs  prefab_picker.rs  project_files.rs  project_select.rs  reflect_default.rs  scene_io.rs  status_bar.rs  transform_ops.rs  view_ops.rs  viewport.rs  viewport_overlays.rs  viewport_select.rs  workspace_dropdown.rs
src/brush/: interaction.rs  mod.rs  preview.rs
src/inspector/: brush_display.rs  component_display.rs  component_picker.rs  custom_props_display.rs  material_display.rs  mod.rs  reflect_fields.rs
src/navmesh/: brp_client.rs  toolbar.rs  visualization.rs
src/remote/: brp.rs  entity_browser.rs  panel.rs  remote_inspector.rs
src/scenes/: confirm_dialog.rs  mod.rs  operators.rs  ui.rs
src/terrain/: inspector.rs  sculpt.rs  toolbar.rs
tests/: dylib_loading.rs  scenes_swap.rs
tests/util/: mod.rs
(+46 files in other folders)
