[package]
name = "jackdaw_debug_panel"
version = "0.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Generic remote Debug Settings panel marker + BRP method for Jackdaw-attached Bevy apps."

[dependencies]
bevy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
